# cmake_example

./: CMakeLists.txt  README.md
executable_src/: main.cpp
library_dep/: dep.cpp  dep.h
library_src/: simple.cpp
